@@ -13,6 +13,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @CrossOrigin
 @RestController
@@ -32,7 +33,7 @@ public class CleaningControllerRest {
                 .stream()
                 .sorted(
                     (c1, c2) -> c1.getCleaningDate().compareTo(c2.getCleaningDate()))
-                .toList();
+                .collect(Collectors.toList());
     }
 
 }
